--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="da">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -23,6 +23,7 @@
         ga('create', 'UA-19276298-1', 'auto');
         ga('send', 'pageview');
     </script>
+    <meta name="google-site-verification" content="vq-HfXVlfF2LMD6vL_TITjB-B7E5tr5cqdInj3v53kQ" />
 </head>
 <body>
     <div class="site">
